@@ -1,3 +1,8 @@
+2006-07-18  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_GrampsBSDDB.py
+	(GrampsBSDDB._delete_primary_from_reference_map): defer deleting
+	until the cursor is closed.
+
 2006-07-18  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/GraphViz.py: Make it work for Windows
 
